--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     }
   </script>
 </head>
-<body style='background-image: url("images/mike.jpg"); background-size: cover;'>
+<body style='background-image: url("images/dchanges.jpg"); background-size: cover;'>
   <h1 id="heading"></h1>
   <ul id="navigation">
     <li><a href="home.html">Home </a></li>
@@ -52,7 +52,7 @@
               <textarea rows="5"  id="message" ></textarea>
           </div>
           <div class="group">
-              <input type="submit" id="submitted" value="Contact Me" />
+              <input type="submit" id="submitted" value="Submit" />
           </div>
       </form>
   </div>
