--- a/engage.html
+++ b/engage.html
@@ -5,7 +5,7 @@
   <title> page trial 01</title>
   <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
-<body style='background-image: url("images/bro.jpg"); background-size: cover;'>
+<body style='background-image: url("images/caro.jpg"); background-size: cover;'>
   <h1 id="heading"></h1>
   <ul id="navigation">
     <li><a href="home.html">Home </a></li>
